# ci_example

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/example_repo/: __init__.py  cli.py  core.py
src/example_repo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_core.py
